synergy/service/router/protocol/v1/Scanner.cpp

#line 1 "Scanner.cpp.rl"

#line 56 "Scanner.cpp.rl"



#include "Scanner.hpp"
#include "MessageTypes.hpp"
#include <fmt/ostream.h>
#include <synergy/service/ServiceLogs.h>

#define XX_CHAR_PTR(X) reinterpret_cast<char const*>(X)

#define PROC(TYPE)                  \
{                                   \
    TYPE##Message msg;              \
    msg.read_from (XX_CHAR_PTR(ts), XX_CHAR_PTR(data), XX_CHAR_PTR(te));   \
    if (!handle (msg)) {            \
        routerLog ()->debug ("Handler failed to process core {} message: {}", \
                             ((flow == Flow::STC) ? "server" : "client"), msg);  \
        return false;               \
    }                               \
}

namespace synergy {
namespace protocol {
namespace v1 {


#line 32 "Scanner.cpp"
static const int synergy_proto_v1_start = 168;
static const int synergy_proto_v1_first_final = 168;
static const int synergy_proto_v1_error = 0;

static const int synergy_proto_v1_en_message = 168;


#line 82 "Scanner.cpp.rl"

bool
process (
    Flow const flow,
    Handler& handle,
    unsigned char const* const msg,
    std::size_t const size
){
    unsigned char const* p = msg;
    unsigned char const* const pe = msg + size;
    unsigned char const* const eof = pe;
    int cs;
    int act;
    unsigned char const* ts;
    unsigned char const* te;


#line 58 "Scanner.cpp"
	{
	cs = synergy_proto_v1_start;
	ts = 0;
	te = 0;
	act = 0;
	}

#line 99 "Scanner.cpp.rl"

    std::size_t dlen = 0;
    std::size_t dsize = 0;
    unsigned char const* data = nullptr;


#line 73 "Scanner.cpp"
	{
	short _widec;
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
tr19:
#line 32 "Scanner.cpp.rl"
	{te = p+1;{ PROC(ClipboardGrab) }}
	goto st168;
tr33:
#line 30 "Scanner.cpp.rl"
	{te = p+1;{ PROC(Enter) }}
	goto st168;
tr42:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
#line 33 "Scanner.cpp.rl"
	{te = p+1;{ PROC(Screensaver) }}
	goto st168;
tr92:
#line 46 "Scanner.cpp.rl"
	{te = p+1;{ PROC(Info) }}
	goto st168;
tr102:
#line 37 "Scanner.cpp.rl"
	{te = p+1;{ PROC(KeyDown) }}
	goto st168;
tr111:
#line 38 "Scanner.cpp.rl"
	{te = p+1;{ PROC(KeyRepeat) }}
	goto st168;
tr118:
#line 39 "Scanner.cpp.rl"
	{te = p+1;{ PROC(KeyUp) }}
	goto st168;
tr125:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
#line 40 "Scanner.cpp.rl"
	{te = p+1;{ PROC(MouseDown) }}
	goto st168;
tr130:
#line 42 "Scanner.cpp.rl"
	{te = p+1;{ PROC(MouseMove) }}
	goto st168;
tr135:
#line 43 "Scanner.cpp.rl"
	{te = p+1;{ PROC(MouseRelMove) }}
	goto st168;
tr137:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
#line 41 "Scanner.cpp.rl"
	{te = p+1;{ PROC(MouseUp) }}
	goto st168;
tr142:
#line 44 "Scanner.cpp.rl"
	{te = p+1;{ PROC(MouseWheelMove) }}
	goto st168;
tr161:
#line 51 "Scanner.cpp.rl"
	{te = p+1;{ PROC(Incompatible) }}
	goto st168;
tr190:
#line 26 "Scanner.cpp.rl"
	{te = p+1;{ PROC(Hello) }}
	goto st168;
tr197:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
#line 36 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(KeepAlive) }}
	goto st168;
tr198:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
#line 29 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(Close) }}
	goto st168;
tr199:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
#line 35 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(InfoAck) }}
	goto st168;
tr200:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
#line 28 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(Noop) }}
	goto st168;
tr201:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
#line 31 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(Leave) }}
	goto st168;
tr202:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
#line 34 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(ResetOptions) }}
	goto st168;
tr203:
#line 45 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(ClipboardData) }}
	goto st168;
tr204:
#line 12 "Scanner.cpp.rl"
	{ p--; p += (dlen * dsize); }
#line 45 "Scanner.cpp.rl"
	{te = p+1;{ PROC(ClipboardData) }}
	goto st168;
tr205:
#line 49 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(DragInfo) }}
	goto st168;
tr206:
#line 12 "Scanner.cpp.rl"
	{ p--; p += (dlen * dsize); }
#line 49 "Scanner.cpp.rl"
	{te = p+1;{ PROC(DragInfo) }}
	goto st168;
tr207:
#line 48 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(FileTransfer) }}
	goto st168;
tr208:
#line 12 "Scanner.cpp.rl"
	{ p--; p += (dlen * dsize); }
#line 48 "Scanner.cpp.rl"
	{te = p+1;{ PROC(FileTransfer) }}
	goto st168;
tr209:
#line 47 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(SetOptions) }}
	goto st168;
tr210:
#line 12 "Scanner.cpp.rl"
	{ p--; p += (dlen * dsize); }
#line 47 "Scanner.cpp.rl"
	{te = p+1;{ PROC(SetOptions) }}
	goto st168;
tr211:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
#line 54 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(Bad) }}
	goto st168;
tr212:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
#line 52 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(Busy) }}
	goto st168;
tr213:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
#line 53 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(Unknown) }}
	goto st168;
tr214:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
#line 50 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(InfoQuery) }}
	goto st168;
tr215:
#line 27 "Scanner.cpp.rl"
	{te = p;p--;{ PROC(HelloBack) }}
	goto st168;
tr216:
#line 12 "Scanner.cpp.rl"
	{ p--; p += (dlen * dsize); }
#line 27 "Scanner.cpp.rl"
	{te = p+1;{ PROC(HelloBack) }}
	goto st168;
st168:
#line 1 "NONE"
	{ts = 0;}
	if ( ++p == pe )
		goto _test_eof168;
case 168:
#line 1 "NONE"
	{ts = p;}
#line 260 "Scanner.cpp"
	_widec = (*p);
	if ( 83u <= (*p) && (*p) <= 83u ) {
		_widec = (short)(256u + ((*p) - 0u));
		if ( 
#line 5 "Scanner.cpp.rl"
 flow == Flow::STC  ) _widec += 256;
	}
	switch( _widec ) {
		case 67: goto st1;
		case 68: goto st35;
		case 69: goto st129;
		case 81: goto st141;
		case 339: goto st144;
		case 595: goto st158;
	}
	goto st0;
st0:
cs = 0;
	goto _out;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
	switch( (*p) ) {
		case 65u: goto st2;
		case 66u: goto st4;
		case 67u: goto st6;
		case 73u: goto st13;
		case 78u: goto st26;
		case 79u: goto st28;
		case 82u: goto st30;
		case 83u: goto st32;
	}
	goto st0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) == 76u )
		goto st3;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 86u )
		goto st169;
	goto st0;
st169:
	if ( ++p == pe )
		goto _test_eof169;
case 169:
	goto tr197;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 89u )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 69u )
		goto st170;
	goto st0;
st170:
	if ( ++p == pe )
		goto _test_eof170;
case 170:
	goto tr198;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( (*p) == 76u )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 80u )
		goto st8;
	goto st0;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	goto tr15;
tr15:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 360 "Scanner.cpp"
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
	goto tr19;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
	switch( (*p) ) {
		case 65u: goto st14;
		case 78u: goto st15;
	}
	goto st0;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( (*p) == 75u )
		goto st171;
	goto st0;
st171:
	if ( ++p == pe )
		goto _test_eof171;
case 171:
	goto tr199;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
	if ( (*p) == 78u )
		goto st16;
	goto st0;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	goto tr24;
tr24:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
	goto st17;
st17:
	if ( ++p == pe )
		goto _test_eof17;
case 17:
#line 418 "Scanner.cpp"
	goto st18;
st18:
	if ( ++p == pe )
		goto _test_eof18;
case 18:
	goto st19;
st19:
	if ( ++p == pe )
		goto _test_eof19;
case 19:
	goto st20;
st20:
	if ( ++p == pe )
		goto _test_eof20;
case 20:
	goto st21;
st21:
	if ( ++p == pe )
		goto _test_eof21;
case 21:
	goto st22;
st22:
	if ( ++p == pe )
		goto _test_eof22;
case 22:
	goto st23;
st23:
	if ( ++p == pe )
		goto _test_eof23;
case 23:
	goto st24;
st24:
	if ( ++p == pe )
		goto _test_eof24;
case 24:
	goto st25;
st25:
	if ( ++p == pe )
		goto _test_eof25;
case 25:
	goto tr33;
st26:
	if ( ++p == pe )
		goto _test_eof26;
case 26:
	if ( (*p) == 79u )
		goto st27;
	goto st0;
st27:
	if ( ++p == pe )
		goto _test_eof27;
case 27:
	if ( (*p) == 80u )
		goto st172;
	goto st0;
st172:
	if ( ++p == pe )
		goto _test_eof172;
case 172:
	goto tr200;
st28:
	if ( ++p == pe )
		goto _test_eof28;
case 28:
	if ( (*p) == 85u )
		goto st29;
	goto st0;
st29:
	if ( ++p == pe )
		goto _test_eof29;
case 29:
	if ( (*p) == 84u )
		goto st173;
	goto st0;
st173:
	if ( ++p == pe )
		goto _test_eof173;
case 173:
	goto tr201;
st30:
	if ( ++p == pe )
		goto _test_eof30;
case 30:
	if ( (*p) == 79u )
		goto st31;
	goto st0;
st31:
	if ( ++p == pe )
		goto _test_eof31;
case 31:
	if ( (*p) == 80u )
		goto st174;
	goto st0;
st174:
	if ( ++p == pe )
		goto _test_eof174;
case 174:
	goto tr202;
st32:
	if ( ++p == pe )
		goto _test_eof32;
case 32:
	if ( (*p) == 69u )
		goto st33;
	goto st0;
st33:
	if ( ++p == pe )
		goto _test_eof33;
case 33:
	if ( (*p) == 67u )
		goto st34;
	goto st0;
st34:
	if ( ++p == pe )
		goto _test_eof34;
case 34:
	goto tr42;
st35:
	if ( ++p == pe )
		goto _test_eof35;
case 35:
	switch( (*p) ) {
		case 67u: goto st36;
		case 68u: goto st48;
		case 70u: goto st56;
		case 73u: goto st63;
		case 75u: goto st79;
		case 77u: goto st103;
		case 83u: goto st123;
	}
	goto st0;
st36:
	if ( ++p == pe )
		goto _test_eof36;
case 36:
	if ( (*p) == 76u )
		goto st37;
	goto st0;
st37:
	if ( ++p == pe )
		goto _test_eof37;
case 37:
	if ( (*p) == 80u )
		goto st38;
	goto st0;
st38:
	if ( ++p == pe )
		goto _test_eof38;
case 38:
	goto tr52;
tr52:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
	goto st39;
st39:
	if ( ++p == pe )
		goto _test_eof39;
case 39:
#line 577 "Scanner.cpp"
	goto st40;
st40:
	if ( ++p == pe )
		goto _test_eof40;
case 40:
	goto st41;
st41:
	if ( ++p == pe )
		goto _test_eof41;
case 41:
	goto st42;
st42:
	if ( ++p == pe )
		goto _test_eof42;
case 42:
	goto st43;
st43:
	if ( ++p == pe )
		goto _test_eof43;
case 43:
	goto st44;
st44:
	if ( ++p == pe )
		goto _test_eof44;
case 44:
	goto tr58;
tr58:
#line 22 "Scanner.cpp.rl"
	{ std::cout << "\ndlen = " << dlen << std::endl; dsize = 1; }
#line 7 "Scanner.cpp.rl"
	{ dlen = (*p); std::cout << "\n" << "byte: " << (unsigned int) (*p); }
	goto st45;
st45:
	if ( ++p == pe )
		goto _test_eof45;
case 45:
#line 8 "Scanner.cpp.rl"
	{ dlen <<= 8; }
#line 9 "Scanner.cpp.rl"
	{ dlen |= (*p); std::cout << "byte: " << (unsigned int) (*p) << ", "; }
#line 618 "Scanner.cpp"
	goto st46;
st46:
	if ( ++p == pe )
		goto _test_eof46;
case 46:
#line 8 "Scanner.cpp.rl"
	{ dlen <<= 8; }
#line 9 "Scanner.cpp.rl"
	{ dlen |= (*p); std::cout << "byte: " << (unsigned int) (*p) << ", "; }
#line 628 "Scanner.cpp"
	goto st47;
st47:
	if ( ++p == pe )
		goto _test_eof47;
case 47:
#line 8 "Scanner.cpp.rl"
	{ dlen <<= 8; }
#line 9 "Scanner.cpp.rl"
	{ dlen |= (*p); std::cout << "byte: " << (unsigned int) (*p) << ", "; }
#line 638 "Scanner.cpp"
	goto st175;
st175:
	if ( ++p == pe )
		goto _test_eof175;
case 175:
	_widec = (*p);
	_widec = (short)(768u + ((*p) - 0u));
	if ( 
#line 11 "Scanner.cpp.rl"
 (dlen > 0) && ((dlen * dsize) <= (pe - p))  ) _widec += 256;
	if ( 1024 <= _widec && _widec <= 1279 )
		goto tr204;
	goto tr203;
st48:
	if ( ++p == pe )
		goto _test_eof48;
case 48:
	if ( (*p) == 82u )
		goto st49;
	goto st0;
st49:
	if ( ++p == pe )
		goto _test_eof49;
case 49:
	if ( (*p) == 71u )
		goto st50;
	goto st0;
st50:
	if ( ++p == pe )
		goto _test_eof50;
case 50:
	goto tr64;
tr64:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
	goto st51;
st51:
	if ( ++p == pe )
		goto _test_eof51;
case 51:
#line 679 "Scanner.cpp"
	goto st52;
st52:
	if ( ++p == pe )
		goto _test_eof52;
case 52:
	goto tr66;
tr66:
#line 22 "Scanner.cpp.rl"
	{ std::cout << "\ndlen = " << dlen << std::endl; dsize = 1; }
#line 7 "Scanner.cpp.rl"
	{ dlen = (*p); std::cout << "\n" << "byte: " << (unsigned int) (*p); }
	goto st53;
st53:
	if ( ++p == pe )
		goto _test_eof53;
case 53:
#line 8 "Scanner.cpp.rl"
	{ dlen <<= 8; }
#line 9 "Scanner.cpp.rl"
	{ dlen |= (*p); std::cout << "byte: " << (unsigned int) (*p) << ", "; }
#line 700 "Scanner.cpp"
	goto st54;
st54:
	if ( ++p == pe )
		goto _test_eof54;
case 54:
#line 8 "Scanner.cpp.rl"
	{ dlen <<= 8; }
#line 9 "Scanner.cpp.rl"
	{ dlen |= (*p); std::cout << "byte: " << (unsigned int) (*p) << ", "; }
#line 710 "Scanner.cpp"
	goto st55;
st55:
	if ( ++p == pe )
		goto _test_eof55;
case 55:
#line 8 "Scanner.cpp.rl"
	{ dlen <<= 8; }
#line 9 "Scanner.cpp.rl"
	{ dlen |= (*p); std::cout << "byte: " << (unsigned int) (*p) << ", "; }
#line 720 "Scanner.cpp"
	goto st176;
st176:
	if ( ++p == pe )
		goto _test_eof176;
case 176:
	_widec = (*p);
	_widec = (short)(768u + ((*p) - 0u));
	if ( 
#line 11 "Scanner.cpp.rl"
 (dlen > 0) && ((dlen * dsize) <= (pe - p))  ) _widec += 256;
	if ( 1024 <= _widec && _widec <= 1279 )
		goto tr206;
	goto tr205;
st56:
	if ( ++p == pe )
		goto _test_eof56;
case 56:
	if ( (*p) == 84u )
		goto st57;
	goto st0;
st57:
	if ( ++p == pe )
		goto _test_eof57;
case 57:
	if ( (*p) == 82u )
		goto st58;
	goto st0;
st58:
	if ( ++p == pe )
		goto _test_eof58;
case 58:
	goto tr72;
tr72:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
	goto st59;
st59:
	if ( ++p == pe )
		goto _test_eof59;
case 59:
#line 761 "Scanner.cpp"
	goto tr73;
tr73:
#line 22 "Scanner.cpp.rl"
	{ std::cout << "\ndlen = " << dlen << std::endl; dsize = 1; }
#line 7 "Scanner.cpp.rl"
	{ dlen = (*p); std::cout << "\n" << "byte: " << (unsigned int) (*p); }
	goto st60;
st60:
	if ( ++p == pe )
		goto _test_eof60;
case 60:
#line 8 "Scanner.cpp.rl"
	{ dlen <<= 8; }
#line 9 "Scanner.cpp.rl"
	{ dlen |= (*p); std::cout << "byte: " << (unsigned int) (*p) << ", "; }
#line 777 "Scanner.cpp"
	goto st61;
st61:
	if ( ++p == pe )
		goto _test_eof61;
case 61:
#line 8 "Scanner.cpp.rl"
	{ dlen <<= 8; }
#line 9 "Scanner.cpp.rl"
	{ dlen |= (*p); std::cout << "byte: " << (unsigned int) (*p) << ", "; }
#line 787 "Scanner.cpp"
	goto st62;
st62:
	if ( ++p == pe )
		goto _test_eof62;
case 62:
#line 8 "Scanner.cpp.rl"
	{ dlen <<= 8; }
#line 9 "Scanner.cpp.rl"
	{ dlen |= (*p); std::cout << "byte: " << (unsigned int) (*p) << ", "; }
#line 797 "Scanner.cpp"
	goto st177;
st177:
	if ( ++p == pe )
		goto _test_eof177;
case 177:
	_widec = (*p);
	_widec = (short)(768u + ((*p) - 0u));
	if ( 
#line 11 "Scanner.cpp.rl"
 (dlen > 0) && ((dlen * dsize) <= (pe - p))  ) _widec += 256;
	if ( 1024 <= _widec && _widec <= 1279 )
		goto tr208;
	goto tr207;
st63:
	if ( ++p == pe )
		goto _test_eof63;
case 63:
	if ( (*p) == 78u )
		goto st64;
	goto st0;
st64:
	if ( ++p == pe )
		goto _test_eof64;
case 64:
	if ( (*p) == 70u )
		goto st65;
	goto st0;
st65:
	if ( ++p == pe )
		goto _test_eof65;
case 65:
	goto tr79;
tr79:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
	goto st66;
st66:
	if ( ++p == pe )
		goto _test_eof66;
case 66:
#line 838 "Scanner.cpp"
	goto st67;
st67:
	if ( ++p == pe )
		goto _test_eof67;
case 67:
	goto st68;
st68:
	if ( ++p == pe )
		goto _test_eof68;
case 68:
	goto st69;
st69:
	if ( ++p == pe )
		goto _test_eof69;
case 69:
	goto st70;
st70:
	if ( ++p == pe )
		goto _test_eof70;
case 70:
	goto st71;
st71:
	if ( ++p == pe )
		goto _test_eof71;
case 71:
	goto st72;
st72:
	if ( ++p == pe )
		goto _test_eof72;
case 72:
	goto st73;
st73:
	if ( ++p == pe )
		goto _test_eof73;
case 73:
	goto st74;
st74:
	if ( ++p == pe )
		goto _test_eof74;
case 74:
	goto st75;
st75:
	if ( ++p == pe )
		goto _test_eof75;
case 75:
	goto st76;
st76:
	if ( ++p == pe )
		goto _test_eof76;
case 76:
	goto st77;
st77:
	if ( ++p == pe )
		goto _test_eof77;
case 77:
	goto st78;
st78:
	if ( ++p == pe )
		goto _test_eof78;
case 78:
	goto tr92;
st79:
	if ( ++p == pe )
		goto _test_eof79;
case 79:
	switch( (*p) ) {
		case 68u: goto st80;
		case 82u: goto st87;
		case 85u: goto st96;
	}
	goto st0;
st80:
	if ( ++p == pe )
		goto _test_eof80;
case 80:
	if ( (*p) == 78u )
		goto st81;
	goto st0;
st81:
	if ( ++p == pe )
		goto _test_eof81;
case 81:
	goto tr97;
tr97:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
	goto st82;
st82:
	if ( ++p == pe )
		goto _test_eof82;
case 82:
#line 930 "Scanner.cpp"
	goto st83;
st83:
	if ( ++p == pe )
		goto _test_eof83;
case 83:
	goto st84;
st84:
	if ( ++p == pe )
		goto _test_eof84;
case 84:
	goto st85;
st85:
	if ( ++p == pe )
		goto _test_eof85;
case 85:
	goto st86;
st86:
	if ( ++p == pe )
		goto _test_eof86;
case 86:
	goto tr102;
st87:
	if ( ++p == pe )
		goto _test_eof87;
case 87:
	if ( (*p) == 80u )
		goto st88;
	goto st0;
st88:
	if ( ++p == pe )
		goto _test_eof88;
case 88:
	goto tr104;
tr104:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
	goto st89;
st89:
	if ( ++p == pe )
		goto _test_eof89;
case 89:
#line 972 "Scanner.cpp"
	goto st90;
st90:
	if ( ++p == pe )
		goto _test_eof90;
case 90:
	goto st91;
st91:
	if ( ++p == pe )
		goto _test_eof91;
case 91:
	goto st92;
st92:
	if ( ++p == pe )
		goto _test_eof92;
case 92:
	goto st93;
st93:
	if ( ++p == pe )
		goto _test_eof93;
case 93:
	goto st94;
st94:
	if ( ++p == pe )
		goto _test_eof94;
case 94:
	goto st95;
st95:
	if ( ++p == pe )
		goto _test_eof95;
case 95:
	goto tr111;
st96:
	if ( ++p == pe )
		goto _test_eof96;
case 96:
	if ( (*p) == 80u )
		goto st97;
	goto st0;
st97:
	if ( ++p == pe )
		goto _test_eof97;
case 97:
	goto tr113;
tr113:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
	goto st98;
st98:
	if ( ++p == pe )
		goto _test_eof98;
case 98:
#line 1024 "Scanner.cpp"
	goto st99;
st99:
	if ( ++p == pe )
		goto _test_eof99;
case 99:
	goto st100;
st100:
	if ( ++p == pe )
		goto _test_eof100;
case 100:
	goto st101;
st101:
	if ( ++p == pe )
		goto _test_eof101;
case 101:
	goto st102;
st102:
	if ( ++p == pe )
		goto _test_eof102;
case 102:
	goto tr118;
st103:
	if ( ++p == pe )
		goto _test_eof103;
case 103:
	switch( (*p) ) {
		case 68u: goto st104;
		case 77u: goto st106;
		case 82u: goto st111;
		case 85u: goto st116;
		case 87u: goto st118;
	}
	goto st0;
st104:
	if ( ++p == pe )
		goto _test_eof104;
case 104:
	if ( (*p) == 78u )
		goto st105;
	goto st0;
st105:
	if ( ++p == pe )
		goto _test_eof105;
case 105:
	goto tr125;
st106:
	if ( ++p == pe )
		goto _test_eof106;
case 106:
	if ( (*p) == 86u )
		goto st107;
	goto st0;
st107:
	if ( ++p == pe )
		goto _test_eof107;
case 107:
	goto tr127;
tr127:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
	goto st108;
st108:
	if ( ++p == pe )
		goto _test_eof108;
case 108:
#line 1090 "Scanner.cpp"
	goto st109;
st109:
	if ( ++p == pe )
		goto _test_eof109;
case 109:
	goto st110;
st110:
	if ( ++p == pe )
		goto _test_eof110;
case 110:
	goto tr130;
st111:
	if ( ++p == pe )
		goto _test_eof111;
case 111:
	if ( (*p) == 77u )
		goto st112;
	goto st0;
st112:
	if ( ++p == pe )
		goto _test_eof112;
case 112:
	goto tr132;
tr132:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
	goto st113;
st113:
	if ( ++p == pe )
		goto _test_eof113;
case 113:
#line 1122 "Scanner.cpp"
	goto st114;
st114:
	if ( ++p == pe )
		goto _test_eof114;
case 114:
	goto st115;
st115:
	if ( ++p == pe )
		goto _test_eof115;
case 115:
	goto tr135;
st116:
	if ( ++p == pe )
		goto _test_eof116;
case 116:
	if ( (*p) == 80u )
		goto st117;
	goto st0;
st117:
	if ( ++p == pe )
		goto _test_eof117;
case 117:
	goto tr137;
st118:
	if ( ++p == pe )
		goto _test_eof118;
case 118:
	if ( (*p) == 77u )
		goto st119;
	goto st0;
st119:
	if ( ++p == pe )
		goto _test_eof119;
case 119:
	goto tr139;
tr139:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
	goto st120;
st120:
	if ( ++p == pe )
		goto _test_eof120;
case 120:
#line 1166 "Scanner.cpp"
	goto st121;
st121:
	if ( ++p == pe )
		goto _test_eof121;
case 121:
	goto st122;
st122:
	if ( ++p == pe )
		goto _test_eof122;
case 122:
	goto tr142;
st123:
	if ( ++p == pe )
		goto _test_eof123;
case 123:
	if ( (*p) == 79u )
		goto st124;
	goto st0;
st124:
	if ( ++p == pe )
		goto _test_eof124;
case 124:
	if ( (*p) == 80u )
		goto st125;
	goto st0;
st125:
	if ( ++p == pe )
		goto _test_eof125;
case 125:
	goto tr145;
tr145:
#line 6 "Scanner.cpp.rl"
	{ data = p; }
#line 23 "Scanner.cpp.rl"
	{ dsize = 4; }
#line 7 "Scanner.cpp.rl"
	{ dlen = (*p); std::cout << "\n" << "byte: " << (unsigned int) (*p); }
	goto st126;
st126:
	if ( ++p == pe )
		goto _test_eof126;
case 126:
#line 8 "Scanner.cpp.rl"
	{ dlen <<= 8; }
#line 9 "Scanner.cpp.rl"
	{ dlen |= (*p); std::cout << "byte: " << (unsigned int) (*p) << ", "; }
#line 1213 "Scanner.cpp"
	goto st127;
st127:
	if ( ++p == pe )
		goto _test_eof127;
case 127:
#line 8 "Scanner.cpp.rl"
	{ dlen <<= 8; }
#line 9 "Scanner.cpp.rl"
	{ dlen |= (*p); std::cout << "byte: " << (unsigned int) (*p) << ", "; }
#line 1223 "Scanner.cpp"
	goto st128;
st128:
	if ( ++p == pe )
		goto _test_eof128;
case 128:
#line 8 "Scanner.cpp.rl"
	{ dlen <<= 8; }
#line 9 "Scanner.cpp.rl"
	{ dlen |= (*p); std::cout << "byte: " << (unsigned int) (*p) << ", "; }
#line 1233 "Scanner.cpp"
	goto st178;
st178:
	if ( ++p == pe )
		goto _test_eof178;
case 178:
	_widec = (*p);
